    - debian/patches/17-fix-tao-encode_value-memory-leak: new patch
      from upstream to fix a potential memory leak.
    - debian/mpc-ace.install: add depgen.pl. (Closes: #289157)
    - debian/tao_idl: new script that automatically sets ACE_ROOT and
      TAO_ROOT environment variables. (Closes: #289158)
    - debian/rules: unbreak gperf-ace. (Closes: #294338)

 -- Thomas Girard <thomas.g.girard@free.fr>  Sat, 12 Feb 2005 11:29:40 +0100

ace (5.4.2.1.0-2) unstable; urgency=medium

  * Konstantinos Margaritis <markos@debian.org>
    - Changed dependency of libfltk1-dev in libace-flreactor-dev to
    libfltk1.1-dev (Closes: #289287)
    - Added Uploaders field in control.

 -- Konstantinos Margaritis <markos@debian.org>  Sat,  8 Jan 2005 22:39:05 +0200

ace (5.4.2.1.0-1) unstable; urgency=low

  * Thomas Girard <thomas.g.girard@free.fr>
    - Much lintian cleaning.
    - Integrate upstream MPC patch to honour `libout' and `install' keywords.
    - Repackage FTRT_EventChannel.
    - Bug 242881 was closed in the previous upload. (Closes: #242881)
    - debian/control: libtao-dev should depend on libace-dev.
      (Closes: #277052)
    - debian/{Basic,Event,Notify,RTEvent}_Logging_Service.sgml: new man pages.
    - debian/rules: add docbook-to-man calls.
  * Raphael Bossek <bossekr@debian.org>
    - debian/config/debian.features: MPC configuration for Debian GNU/Linux added
    - debian/config/platform_macros.GNU: Removed due to introduction of
      debian.features files. This file will be generated
    - debian/rules: Uses dpatch. Simplified clean target by removing temporary
      ACE_wrappers subdirectory. Install ace-config and tao-config scripts
      with executable bit set (Closes: #278522, #278523)
    - debian/control: Added new reactor packages. Removed depricated
      suggestions on ace+tao-utilities. Added libssl-dev as recommendation for
      libace-dev. Added suggestions for pkg-config
    - Upgrade to latest version of TAO (Closes: #265238)