@@ -9,8 +9,10 @@ ace (5.4.2.1.0-3) unstable; urgency=low
     - debian/tao_idl: new script that automatically sets ACE_ROOT and
       TAO_ROOT environment variables. (Closes: #289158)
     - debian/rules: unbreak gperf-ace. (Closes: #294338)
+    - debian/remove_reactor_dups.sh: new script to ensure that duplicate 
+      reactor header files get deleted. (Closes: #294660)
 
- -- Thomas Girard <thomas.g.girard@free.fr>  Sat, 12 Feb 2005 11:29:40 +0100
+ -- Thomas Girard <thomas.g.girard@free.fr>  Sat, 12 Feb 2005 20:39:12 +0100
 
 ace (5.4.2.1.0-2) unstable; urgency=medium
 
